--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
     "@mui/material": "^5.12.3",
     "@mui/x-data-grid": "^6.3.1",
     "@mui/x-date-pickers": "^6.4.0",
+    "@react-google-maps/api": "^2.18.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.4.7",
     "axios": "^1.4.0",
+    "google-map-react": "^2.2.1",
+    "leaflet": "^1.9.3",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-maps": "^9.4.5",
     "react-icons": "^4.8.0",
+    "react-leaflet": "^4.2.1",
     "react-lottie": "^1.2.3",
     "react-phone-number-input": "^3.2.20",
     "react-router-dom": "^6.11.1",
