--- a/package.json
+++ b/package.json
@@ -14,17 +14,23 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@ubilabs/google-maps-react-hooks": "^2.0.2",
     "antd": "^5.4.7",
     "axios": "^1.4.0",
     "google-map-react": "^2.2.1",
     "leaflet": "^1.9.3",
+    "load-google-maps-api": "^2.0.2",
+    "mapbox-gl": "^2.14.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-autocomplete": "^2.7.3",
     "react-google-maps": "^9.4.5",
+    "react-google-maps-loader": "^4.3.1",
     "react-icons": "^4.8.0",
     "react-leaflet": "^4.2.1",
     "react-lottie": "^1.2.3",
+    "react-map-gl": "^7.0.23",
     "react-phone-number-input": "^3.2.20",
     "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
