--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mapbox-gl": "^2.14.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
     "react-google-autocomplete": "^2.7.3",
     "react-google-maps": "^9.4.5",
