--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "antd": "^5.4.7",
     "axios": "^1.4.0",
     "google-map-react": "^2.2.1",
+    "google-maps-react": "^2.0.6",
     "leaflet": "^1.9.3",
     "load-google-maps-api": "^2.0.2",
     "mapbox-gl": "^2.14.1",
