--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@ubilabs/google-maps-react-hooks": "^2.0.2",
     "antd": "^5.4.7",
     "axios": "^1.4.0",
+    "dotenv": "^16.0.3",
     "google-map-react": "^2.2.1",
     "google-maps-react": "^2.0.6",
     "leaflet": "^1.9.3",
     "load-google-maps-api": "^2.0.2",
     "mapbox-gl": "^2.14.1",
     "moment": "^2.29.4",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
