--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "google-maps-react": "^2.0.6",
     "leaflet": "^1.9.3",
     "load-google-maps-api": "^2.0.2",
+    "loadjs": "^4.3.0-rc1",
     "mapbox-gl": "^2.14.1",
     "moment": "^2.29.4",
     "path": "^0.12.7",
